# SES

./: .claude.md  .dockerignore  .env.example  .gitattributes  .gitignore  .prettierrc  ARCHITECTURE.md  BRANCH_NOTES.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  PROJECT.md  README.md  SECURITY.md  aipilot.sh  deploy.sh  dev.sh  docker-compose.demo.yml  docker-compose.prod.yml  docker-compose.yml  effort_sample_data.xlsx  expose.sh  go-live.sh  headerfix.md  issues68-73  manifest.xml  nginx.conf  package-lock.json  package.json  plan-rework.md  tailwind.config.js  taskpane.html  tsconfig.base.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.logs/: ai.pid  api.pid  web.pid
certs/: localhost.pfx
docker/: postgres-init.sql
docs/: AUDIT_ENGINE_REWORK.md  CROSS_FUNCTION_NOTIFICATIONS_PLAN.md  FILE_RESTRUCTURE_PLAN.md  LOGGING.md  MIGRATION.md  PHASE-0-COVERAGE.md  PHASE-0-INVENTORY.md  PHASE-0-SUMMARY.md  QA.md  ai-pilot.md  object-storage.md
output/: effort_sample_data.audited.xlsx  processes.json  sessions.json
public/: commands.html  taskpane.html  taskpane.js
scripts/: build-taskpane.mjs  create-dev-cert.ps1  dev-free-ports.sh  dev.sh  guard-prod-not-running.sh
services/ai-sidecar/: Dockerfile  agent.py  main.py  pyproject.toml  smoke-test.sh  start-ai.sh  stop-ai.sh  venv
services/ai-sidecar/evals/: analytics-questions.json
services/ai-sidecar/tools/: anomaly.py  charts.py  sql.py  stats.py  test_sql_security.py
src/: App.tsx  audit.ts  cli.ts  config.ts  index.css  main.tsx  notifications.ts  outlookDrafts.ts  (+10 more)
(+782 files in other folders)
