[project]
name = "ses-ai-sidecar"
version = "0.1.0"
description = "SES AI sidecar — FastAPI + Anthropic Claude + DuckDB analytics agent"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.32.0",
  "pydantic==2.9.0",
  "pandas==2.2.3",
  "duckdb==1.1.1",
  "openpyxl==3.1.5",
  "anthropic>=0.40.0",
  # Optional analytics provider (AI_ANALYTICS_PROVIDER=gemini). Imported
  # lazily in agent.py; local-only default never requires it at runtime.
  "google-genai>=0.3.0",
]

[tool.uv]
package = false
